# adventcode2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md
day01/: CMakeLists.txt
day01/data/: Input.h
day01/part01/: CMakeLists.txt  main.cpp
day01/part01/process/: ProcessPart01.cpp  ProcessPart01.h  ProcessPart02.cpp  ProcessPart02.h
day01/part01/reader/: InputReader.cpp  InputReader.h  ReadingInput.h
day01/part02/: CMakeLists.txt  main.cpp
day01/process/: Processing.h
day02/: CMakeLists.txt  main.cpp
day02/data/: levels.h  reports.h
day02/process/: act01.cpp  act01.h  act02.cpp  act02.h  processinh.h
day02/reader/: InputReader.cpp  InputReader.h
day03/: CMakeLists.txt  main.cpp
day03/data/: input.h
day03/parser/: Parser.cpp  Parser.h
day03/process/: Process01.cpp  Process01.h
day04/: CMakeLists.txt  main.cpp
day04/data/: data.h
day04/process/: Process.h
day04/reader/: Reader.h
day05/: CMakeLists.txt  data.h  main.cpp
